--- a/style.css
+++ b/style.css
@@ -1,2 +1,14 @@
-body {background-color: coral;}
+
 h1 { text-align: center }
+body {background-color: coral;}
+#output {
+  background: white;
+  border-radius: 10px;
+  border-top: 10px solid #AA4465;
+  padding: 10px;
+  float: none;
+  text-align: left;
+}
+#math {
+  background-color: coral;
+}
